--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,21 @@
 *.xml
 *.iml
 result*
+
+20\*20_300/
+
+*.gif
+
+MCAFMs300
+
+MCFMs300
+
+*.png
+
+aDP2
+
+aDP1
+
+20\*20_3000/MCAFMs3000
+
+20\*20_3000/MCFMs3000
